Removed hard coded frontend logic for cipher puzzle